[gd_scene load_steps=5 format=2]

[ext_resource path="res://Skills/ChainLightning/chainlightning.gd" type="Script" id=1]
[ext_resource path="res://Assets/lighshadow32.png" type="Texture" id=2]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.0
angle = 360.0
angle_random = 1.0
scale = 5.0
color = Color( 0.423529, 0.72549, 1, 1 )
hue_variation = 0.04
hue_variation_random = 1.0

[sub_resource type="CircleShape2D" id=2]

[node name="ChainLightning" type="Area2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="Particles2D" type="Particles2D" parent="."]
amount = 20
randomness = 1.0
process_material = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.263519, 0 )
texture = ExtResource( 2 )
texture_scale = 10.0
color = Color( 0.156863, 0.0784314, 1, 1 )
energy = 0.7
shadow_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="LightningContainer" type="Node2D" parent="."]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
